@@ -29,6 +29,10 @@ public_suffix_list = share/public_suffix_list
 hostname  = mail.example.com
 cc        = set.this@for.a.while.example.com
 
+; list IP addresses to whitelist (bypass DMARC reject/quarantine)
+; see sample whitelist in share/dmarc_whitelist
+whitelist = /path/to/etc/dmarc_whitelist
+
 ; By default, we attempt to email directly to the report recipient.
 ; Set these to relay via a SMTP smart host.
 smarthost =
@@ -52,3 +56,4 @@ port      = 8080
 port      = 8443
 ssl_crt   =
 ssl_key   =
+
