@@ -29,6 +29,7 @@ public_suffix_list = share/public_suffix_list
 ; hostname is the external FQDN of this MTA
 hostname  = mail.example.com
 cc        = set.this@for.a.while.example.com
+whitelist = t/whitelist
 
 ; By default, we attempt to email directly to the report recipient.
 ; Set these to relay via a SMTP smart host.
